[gd_scene load_steps=15 format=3 uid="uid://blypovljjijbx"]

[ext_resource type="Script" path="res://scenes/shadow/shadow_orbit.gd" id="1_po2my"]
[ext_resource type="PackedScene" uid="uid://dihnshs372h54" path="res://scenes/shadow/skull.tscn" id="2_wwebs"]
[ext_resource type="AudioStream" uid="uid://b8j8jeaemjef8" path="res://assets/sounds/sfx/skull/Warped Whoosh 002.ogg" id="3_jq05p"]
[ext_resource type="AudioStream" uid="uid://d1br8vk5hf2v7" path="res://assets/sounds/sfx/skull/Warped Whoosh 001.ogg" id="4_b8sky"]
[ext_resource type="Script" path="res://addons/shaker/src/Vector3/shaker_component3D.gd" id="5_gtmju"]
[ext_resource type="Script" path="res://addons/shaker/data/Vector3/BaseShakerType3D.gd" id="6_jceb5"]
[ext_resource type="Script" path="res://addons/shaker/data/Vector3/ShakerTypeSineWave3D.gd" id="7_n5cb7"]
[ext_resource type="Script" path="res://addons/shaker/data/Vector3/ShakerPreset3D.gd" id="8_55ey7"]

[sub_resource type="SphereShape3D" id="SphereShape3D_3adb8"]
radius = 0.335

[sub_resource type="Resource" id="Resource_e15am"]
script = ExtResource("7_n5cb7")
frequency = Vector3(0.2, 0.2, 0.2)
phase = Vector3(1, 1, 1)
amplitude = Vector3(0.55, 0.6, 0.725)
offset = Vector3(0, 0, 0)
BlendingMode = 0
fade_in = 0.0
fade_out = 0.0
start_percent = 0.0
end_percent = 1.0
_temp_graph = false
bake_internal = 64

[sub_resource type="Resource" id="Resource_hibl4"]
script = ExtResource("7_n5cb7")
frequency = Vector3(0.6, 0.47, 0.1)
phase = Vector3(1, 1, 1)
amplitude = Vector3(0.3, 1, 0.2)
offset = Vector3(0, 0, 0)
BlendingMode = 0
fade_in = 0.0
fade_out = 0.0
start_percent = 0.0
end_percent = 1.0
_temp_graph = false
bake_internal = 64

[sub_resource type="Resource" id="Resource_rp725"]
script = ExtResource("8_55ey7")
PositionShake = Array[ExtResource("6_jceb5")]([SubResource("Resource_e15am"), SubResource("Resource_hibl4")])
RotationShake = Array[ExtResource("6_jceb5")]([])
ScaleShake = Array[ExtResource("6_jceb5")]([])
bake_internal = 64
__follow_timeline = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_45m5s"]
transparency = 1
no_depth_test = true
albedo_color = Color(1, 1, 1, 0.337255)

[sub_resource type="SphereShape3D" id="SphereShape3D_ec3pp"]
radius = 6.0

[node name="ShadowOrbit" type="Marker3D"]
transform = Transform3D(-0.368393, 0, -0.934286, 0, 1.00036, 0, 0.934441, 0, -0.368338, -5.24521e-06, 1.65399, -6.85453e-06)
script = ExtResource("1_po2my")
active = true
distance = 5.0

[node name="ShadowDistance" type="Marker3D" parent="."]
transform = Transform3D(0.991345, 0, -0.131323, 0, 1, 0, 0.131325, 0, 0.991331, 0.248861, -0.168826, 4.33973)
metadata/_edit_group_ = true

[node name="Skull" parent="ShadowDistance" instance=ExtResource("2_wwebs")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.350875, -0.180978, -0.0409057)

[node name="Hitbox" type="Area3D" parent="ShadowDistance/Skull"]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="ShadowDistance/Skull/Hitbox"]
shape = SubResource("SphereShape3D_3adb8")

[node name="SkullApproachSound" type="AudioStreamPlayer3D" parent="ShadowDistance"]
unique_name_in_owner = true
stream = ExtResource("3_jq05p")

[node name="SkullAppearSound" type="AudioStreamPlayer3D" parent="ShadowDistance"]
unique_name_in_owner = true
stream = ExtResource("4_b8sky")

[node name="ShakerComponent3D" type="Node3D" parent="ShadowDistance" node_paths=PackedStringArray("Targets")]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0, 0)
script = ExtResource("5_gtmju")
custom_target = true
Targets = [NodePath("..")]
randomize = true
is_playing = true
AutoPlay = true
shake_speed = 0.5
shakerPreset = SubResource("Resource_rp725")

[node name="CSGSphere3D" type="CSGSphere3D" parent="ShadowDistance"]
transform = Transform3D(0.27516, 0, -0.0600774, 0, 0.281643, 0, 0.0600977, 0, 0.275155, -0.0410487, -0.25132, 0.429943)
material = SubResource("StandardMaterial3D_45m5s")

[node name="Hurtbox" type="Area3D" parent="ShadowDistance"]
collision_layer = 128
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="ShadowDistance/Hurtbox"]
shape = SubResource("SphereShape3D_ec3pp")

[connection signal="body_entered" from="ShadowDistance/Skull/Hitbox" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="ShadowDistance/Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_exited" from="ShadowDistance/Hurtbox" to="." method="_on_hurtbox_body_exited"]
